base: use optional replace of jdk
This modification is to eliminate the warning.